fix(maven): preserve JPMS test module path